# Colors

./: .gitignore  README.md  index.html
Gtk-Vala/: Colors.desktop.in  Colors.vala  Makefile.am  README.md  colorsPalette.vala  configure.ac  palette.vala
Java/: ColorsPalette.java  README.md  cPalette.java
Java-Colors/: Colors.java  Listener.java
Web/: index.html
Web/js/: aegis.js  main.js
Web/style/: main.css
js/: main.js
